added dryad to letter

--- a/revision_letter.tex
+++ b/revision_letter.tex
@@ -41,7 +41,7 @@ In response to the comments from yourself, Tanja Stadler, and the reviewers, we 
 
 (3) Minor modifications for clarity were carried out on the following sentences: 
 
-	L115: added "S. australis KM673"
+	L115: added "such as S. australis KM673"
 	L130-L134: sentence restructured
 	L164: start of sentence changed
 	L195: "hundreds of thousands" changed to "millions"
@@ -51,6 +51,8 @@ In response to the comments from yourself, Tanja Stadler, and the reviewers, we 
 (4) Section headings added to manuscript.
 
 (5) Funding statement and Supplementary Material sections added.
+
+(6) Added the corrected COI data file to Dryad.
 
 
 We hope that these changes are satisfactory, and we are looking forward to seeing the article in print.
