final accepted version, with line numbers removed

--- a/dowton-reply.tex
+++ b/dowton-reply.tex
@@ -51,7 +51,7 @@ Robert H.\ Cruickshank$^{2}$\\
 % Make the title.
 \maketitle 
 % Add line numbering
-\linenumbers
+%\linenumbers
 
 In a recent commentary, \citet{Dowton2014} propose a framework for ``next-generation'' DNA barcoding, whereby multi-locus datasets are coupled with coalescent-based species delimitation methods to make specimen identifications. They claim single-locus DNA barcoding is outdated, and a multilocus approach superior, with their assertions supported by an analysis of 33 species of \emph{Sarcophaga} flesh flies. Here, we reanalyse their data and show that a standard DNA barcode analysis is in fact capable of identifying 99.8\% (all but one) of their \emph{Sarcophaga} specimens, and that their conclusions misrepresent their data. We also discuss the benefits and drawbacks to their vision of ``next-gen'' barcoding.
 
