improved metadata in pdf

--- a/dowton-reply.tex
+++ b/dowton-reply.tex
@@ -1,10 +1,14 @@
-\documentclass[12pt]{article}
+\documentclass[a4paper,12pt]{article}
 \usepackage[round]{natbib}%ref formats
 \usepackage[onehalfspacing]{setspace} % set spacing to one and a half
 \usepackage{lineno}%line numbers
 %to add in test referencing of figs
 \PassOptionsToPackage{hyphens,spaces,obeyspaces}{url}\usepackage{hyperref}%to avoid clashes between url and hyperref
-\hypersetup{breaklinks=true,bookmarks=true,colorlinks=true,urlcolor=blue,linkcolor=blue,citecolor=blue,pdfauthor={Rupert A.\ Collins},pdftitle={Dowton et al. reply}}
+\hypersetup{breaklinks=true,bookmarks=true,colorlinks=true,urlcolor=blue,linkcolor=blue,citecolor=blue,
+pdfauthor={Rupert A.\ Collins, Robert H.\ Cruickshank},
+pdftitle={Known knowns, known unknowns, unknown unknowns and unknown knowns in DNA barcoding: a comment on Dowton et al.},
+pdfkeywords={DNA barcoding, Multi-species coalescent, Identification success, Threshold optimisation},
+pdfsubject={Systematic Biology 10.1093/sysbio/syu060}}
 
 % The following parameters seem to provide a reasonable page setup.
 \topmargin 0.0cm
